[package]
name = "rust-sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
dirs = "5.0.0"
fs_extra = "1.3.0"
glob = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tempfile = "3.4.0"
tera = "1.18.1"
walkdir = "2.3.3"
